--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "world-countries": "^5.1.0",
     "zod": "^3.25.43"
   },
   "devDependencies": {
