--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
     "next-themes": "^0.4.6",
@@ -32,12 +33,16 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
+    "react-share": "^5.2.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.5",
     "world-countries": "^5.1.0",
     "zod": "^3.25.43"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
