--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.49.9",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -35,11 +38,14 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-share": "^5.2.2",
+    "recharts": "^3.0.2",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.5",
     "world-countries": "^5.1.0",
-    "zod": "^3.25.43"
+    "zod": "^3.25.43",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.19",
