--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {
-    "react-hooks/exhaustive-deps": "off",
-    "@next/next/no-img-element": "off",
-    "jsx-a11y/alt-text": "off"
-  }
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
